--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,21 +1,19 @@
-<table class="table table-sm">
-  <thead>
-    <h1>Top 3 Players</h1>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Rating</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @top_players.each_with_index do |player, i|%>
-    <tr>
-      <th scope="row"> <%= i+1 %></th>
-      <td><%= player.first_name  %></td>
-      <td><%= player.last_name %></td>
-      <td><%= player.rating %></td>
-    </tr>
-    <% end %>
-  </tbody>
+<div class="w-50 p-3">
+<table class="top-players">
+  <h1>Top 3 Players</h1>
+  <tr>
+    <th>#</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Rating</th>
+  </tr>
+  <% @top_players.each_with_index do |player, i|%>
+  <tr>
+    <td> <%= i+1 %></th>
+    <td><%= player.first_name  %></td>
+    <td><%= player.last_name %></td>
+    <td><%= player.rating %></td>
+  </tr>
+  <% end %>
 </table>
+</div>
