--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,19 +1,33 @@
-<div class="w-50 p-3">
-<table class="top-players">
-  <h1>Top 3 Players</h1>
-  <tr>
-    <th>#</th>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Rating</th>
-  </tr>
-  <% @top_players.each_with_index do |player, i|%>
-  <tr>
-    <td> <%= i+1 %></th>
-    <td><%= player.first_name  %></td>
-    <td><%= player.last_name %></td>
-    <td><%= player.rating %></td>
-  </tr>
-  <% end %>
-</table>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+          <h1>Top 3 Players</h1>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+          <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Rating</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @top_players.each_with_index do |player, i|%>
+                  <tr>
+                    <td> <%= i+1 %></td>
+                    <td><%= player.first_name  %></td>
+                    <td><%= player.last_name %></td>
+                    <td><%= player.rating %></td>
+                  </tr>
+                  <% end %>
+                </tbody>
+              </table>
+        </div>
+    </div>
 </div>
