--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,10 +42,12 @@
             <% end %>
           </li>
           <li>
-            <a data-toggle="modal" href="#msgModal">Scouts</a>
+            <% if current_user %>
+             <a href="/scouts">Scouts</a>
+            <% end %>
           </li>
           <li>
-            <a href="../docs/index.html">News</a>
+            <a href="/news">News</a>
           </li>
         </ul>
 
@@ -68,13 +70,37 @@
         </form>
 
         <ul class="nav navbar-nav hidden-sm hidden-md hidden-lg">
-          <li><a href="/">Home</a></li>
-          <li><a href="/player_profiles">Profile</a></li>
-          <li><a href="../notifications/index.html">Notifications</a></li>
-          <li><a data-toggle="modal" href="#msgModal">Messages</a></li>
-          <li><a href="../docs/index.html">Docs</a></li>
-          <li><a href="#" data-action="growl">Growl</a></li>
-          <li><a href="../login/index.html">Logout</a></li>
+          <li>
+            <% if current_user %>
+              <a href="/users/<%= current_user.id %>">Home</a>
+            <% end %>
+          </li>
+          <li>
+            <% if current_user %>
+              <% if current_user.role == 'player'  %>
+                  <a href="/player_profiles">Profile</a>
+                <% elsif current_user.role == 'scout'%>
+                  <a href="/scout_profiles">Profile</a>
+                <% else %>
+                  <a href="/team_profiles">Profile</a>
+              <% end %>
+            <% end %>
+          </li>
+          <li>
+            <% if current_user %>
+             <a href="/scouts">Scouts</a>
+            <% end %>
+          </li>
+          <li><a href="/news">News</a></li>
+          <li>
+            <% if !current_user %>
+              <a class="app-notifications" href="/login">
+                <span>Login</span>
+              </a>
+            <% else %>
+              <%= link_to "Logout", logout_path, method: :delete, class: "logout" %>
+            <%end%>
+          </li>
         </ul>
 
         <ul class="nav navbar-nav hidden">
