--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,3 +1,19 @@
 <% @news.each do |story| %>
-  <%= story.title %>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3">
+          <div class="panel panel-default panel-profile">
+            <div class="panel-heading" style="background-image: url(<%=story.image%>);"></div>
+                <div class="panel-body text-center">
+                      <h5 class="panel-title">Author: <%= story.author %></h5>
+                      <p class="m-b-md"><a href="<%=story.url%>">Click Here for more.</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-9">
+          <h2><%= story.title %></h2>
+          <p><%= story.description %></p>
+        </div>
+    </div>
+</div>
 <% end %>
