can update scout profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
             </div>
             <nav class="profile-header-nav">
               <ul class="nav nav-tabs">
-                <li><a href="<%= @current_user.first_name %>/edit">Edit Profile</a></a></li>
+                <li><a href="<%= @current_user.id %>/edit">Edit Profile</a></a></li>
               </ul>
             </nav>
           </div>
