--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,19 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://image.ibb.co/nyZep6/stadium_otmar.jpg" alt="Second slide">
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
           <h1>Top 3 Players</h1>
         </div>
     </div>
